[tool.poetry]
name = "filemagick"
version = "0.0.0"
description = "Tools for files manipulation"
readme = "README.md"
homepage = "https://github.com/wonderbeyond/filemagick"
repository = "https://github.com/wonderbeyond/filemagick"
documentation = "https://github.com/wonderbeyond/filemagick"
keywords = ["Python", "CI/CD", "FileMagick", "Templating", "Substitution"]
authors = ["Wonder <wonderbeyond@gmail.com>"]
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.scripts]
filemagick = 'filemagick.__main__:cli'

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = 'pep440'

[tool.poetry.dependencies]
python = "^3.10"
pytest = {version = "^7.1.2", optional = true}
click = "^8.1.3"

[tool.poetry.extras]
testing = ["pytest"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
